about text changed also added the about page

--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <a class="logo" href="#">DeliciousBites Cafe & Grill</a>
             <div class="nav-items">
                 <li><a class="active" href="#home">Home</a></li>
-                <li><a href="#news">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#contact">Gallery</a></li>
                 <li><a href="#contact">Videos</a></li>
@@ -50,10 +50,16 @@
             <div class="column">
                 <h2 class="c-title">About</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia corrupti. <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia corrupti. <br>                
-                   Voluptates, quam aut ex quia soluta ipsum laboriosam perspiciatis dolorem, maxime totam aliquid. Cum impedit repellat illum fugit pariatur quam mollitia corrupti. <br><br>
+                    Welcome to DeliciousBites Cafe & Grill, a culinary haven where flavors dance on your palate and memories are made. Our charming and cozy space invites you to embark on a gastronomic journey like no other. <br>
+                    Our talented chefs pour their passion into each dish, ensuring every bite is an explosion of taste and satisfaction.<br>
 
-                    <a href="" class="offers-btn">Learn More...</a>
+                    Dive into our thoughtfully curated menu, featuring succulent grilled steaks, delectable seafood creations, and a medley of culinary delights to cater to every palate. We pride ourselves on sourcing only the freshest, locally-sourced ingredients, elevating our dishes to new heights of excellence.<br>
+                    
+                    The magic of DeliciousBites doesn't stop at the food. Our mixologists craft signature cocktails, fine wines, and craft brews that perfectly complement your meal. Our warm and attentive staff will ensure you feel right at home, adding a personal touch to every dining experience.<br>
+                    
+                    Whether it's a romantic date night, a gathering with friends, or a delightful family outing, DeliciousBites Cafe & Grill promises an unforgettable dining adventure. Join us in celebrating the art of culinary perfection, where every detail matters, and every moment is savored. Your culinary journey begins here. Bon appétit!<br><br>
+
+                    <a href="about.html" class="offers-btn">Learn More...</a>
 
                 </p>
             </div>
