added font Poppins and locations in about page get aliened

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div class="about-body">
     <div class="about-text">
         <img src="images/a-view.jpg" alt="">
-        <h2>About Us</h2>
+        <h2 class="a-title">About Us</h2>
         <p>            Welcome to DeliciousBites Cafe & Grill, a culinary haven where flavors dance on your palate and memories are made. Our charming and cozy space invites you to embark on a gastronomic journey like no other. Our talented chefs pour their passion into each dish, ensuring every bite is an explosion of taste and satisfaction.<br>
 
 Dive into our thoughtfully curated menu, featuring succulent grilled steaks, delectable seafood creations, and a medley of culinary delights to cater to every palate. We pride ourselves on sourcing only the freshest, locally-sourced ingredients, elevating our dishes to new heights of excellence.<br>
@@ -36,23 +36,28 @@ The magic of DeliciousBites doesn't stop at the food. Our mixologists craft sign
 
 Whether it's a romantic date night, a gathering with friends, or a delightful family outing, DeliciousBites Cafe & Grill promises an unforgettable dining adventure. Join us in celebrating the art of culinary perfection, where every detail matters, and every moment is savored. Your culinary journey begins here. Bon appétit!<br><br>
         </p>
-        <p>
-            <h2>Our Locations:</h2><br>
+        
+            <h2 class="a-title">Our Locations:</h2><br>
 
+            <div class="l-columns"> 
+                <div class="l-column">
             <h4>Dhaka Corporate Hub - Gulshan</h4>
             <p>Address: 123 ABC Road, Gulshan, Dhaka <br>
                 Contact: +880-2-12345678 <br>
-                Email: gulshan@dhakacorporatehub.com</p>
+                Email: gulshan@dhakacorporatehub.com</p></div>
 
+                <div class="l-column">
                 <h4>Dhaka Corporate Hub - Banani</h4>
                 <p>Address: 456 XYZ Road, Banani, Dhaka <br>
                     Contact: +880-2-98765432 <br>
-                    Email: banani@dhakacorporatehub.com </p>
+                    Email: banani@dhakacorporatehub.com </p></div>
 
+                    <div class="l-column">
                     <h4>Dhaka Corporate Hub - Dhanmondi</h4>
                     <p>Address: 789 PQR Road, Dhanmondi, Dhaka <br>
                         Contact: +880-2-56789012 <br>
-                        Email: dhanmondi@dhakacorporatehub.com</p>
+                        Email: dhanmondi@dhakacorporatehub.com</p></div>
+                    </div>
 
 
         </p>
