--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- CSS Link -->
     <link rel="stylesheet" href="design/style.css">
 
-    <title>DeliciousBites Cafe & Grill - Home Page</title>
+    <title>DeliciousBites Cafe & Grill - About Page</title>
 </head>
 <body>
 
@@ -16,7 +16,7 @@
             <div class="nav-items">
                 <li><a href="home.html">Home</a></li>
                 <li><a  class="active" href="#news">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#contact">Gallery</a></li>
                 <li><a href="#contact">Videos</a></li>
             </div>
