--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <div class="nav-items">
                 <li><a class="active" href="#home">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#contact">Gallery</a></li>
                 <li><a href="#contact">Videos</a></li>
             </div>
