--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 
     <div class="nav">
         <ul>
-            <a class="logo" href="#">DeliciousBites Cafe & Grill</a>
+            <a class="logo" href="home.html">DeliciousBites Cafe & Grill</a>
             <div class="nav-items">
                 <li><a href="home.html">Home</a></li>
-                <li><a  class="active" href="#news">About</a></li>
+                <li><a  class="active" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="#contact">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#contact">Videos</a></li>
             </div>
 
